# fz1

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
demo-catalog/: git
demo-catalog/file-managers/: broot  mc  nnn  xplr  yazi
demo-catalog/network/: curl
shell/: fz1.bash  fz1.fish  fz1.zsh
src/: app.rs  catalog.rs  demo.rs  editor.rs  enrichment.rs  main.rs  search.rs  state.rs  tree.rs  ui.rs  xdg.rs
