[package]
name = "fz1"
version = "0.1.1"
edition = "2024"
description = "Terminal catalog and picker for CLI tools"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pavel-voronin/fz1"
homepage = "https://github.com/pavel-voronin/fz1"
documentation = "https://github.com/pavel-voronin/fz1#readme"
keywords = ["tui", "terminal", "cli", "picker", "fzf"]
categories = ["command-line-utilities"]
include = [
    "/src/**",
    "/shell/**",
    "/demo-catalog/**",
    "/demo.gif",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[dependencies]
ratatui = "0.29"
# Keep the TUI on /dev/tty so stdout can stay clean for shell integration.
crossterm = { version = "0.28", features = ["use-dev-tty"] }
fuzzy-matcher = "0.3"
tui-textarea = { version = "0.7", features = ["crossterm"] }
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
